--- a/css/news.css
+++ b/css/news.css
@@ -15,10 +15,10 @@ body {
   font-style: italic;
   font-size: 2rem;
   margin-bottom: 40px;
-  font-weight: 400;
+  font-weight: 200; /* 更为纤细的字体样式 */
   letter-spacing: 0.2px;
   line-height: 1.3;
-  text-align: center;
+  text-align: left; /* 居左显示 */
   position: relative;
 }
 
@@ -28,7 +28,7 @@ body {
   width: 60px;
   height: 3px;
   background-color: var(--primary-color);
-  margin: 15px auto 0;
+  margin: 15px 0 0 0; /* 左对齐装饰线 */
 }
 
 /* 新闻标题去除加粗 */
