--- a/css/cases.css
+++ b/css/cases.css
@@ -150,7 +150,7 @@ body {
   font-style: italic;
   font-size: 2.125rem;
   margin-bottom: 24px;
-  font-weight: 400;
+  font-weight: 200; /* 修改为更纤细的字体样式，与开启之路标题保持一致 */
   letter-spacing: 0.2px;
   line-height: 1.3;
   position: relative;
