--- a/css/image-viewer.css
+++ b/css/image-viewer.css
@@ -83,12 +83,12 @@
 }
 
 .qual-image::after {
-    content: '🔍';
+    content: '\ea9d'; /* ri-zoom-in-line 图标的Unicode */
     position: absolute;
     bottom: 10px;
     right: 10px;
     background-color: rgba(255, 255, 255, 0.7);
-    color: #333;
+    color: #555;
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -98,6 +98,8 @@
     font-size: 16px;
     opacity: 0.8;
     transition: opacity 0.3s ease;
+    font-family: 'remixicon';
+    font-style: normal;
 }
 
 .qual-image:hover::after {
