--- a/css/jobs.css
+++ b/css/jobs.css
@@ -303,7 +303,8 @@ body {
   }
   
   .email-link {
-    font-size: 15px;
+    font-size: 16px;
+    padding: 6px 10px;
   }
   
   .mystery-test-btn {
